# IdolaBot

./: .env  .gitignore  .gitmodules  Makefile  README.md  nohup.out  pyproject.toml  requirements-optional.txt  requirements.txt  start_bot.sh  stop_bot.sh
.github/workflows/: cicd.yml
idola/: idola.py  idola_api.py  idola_bot.py
idola/cogs/: idola.py
idola/idola_id/: Idomag ID.csv
idola/lib/: api.py  bumped.py  twitter.py  twitter_api.py  util.py  web_visualiser.py
idola/lib/image_map/: CharacterImages.csv
